whitespace issue fix and minor style changes

--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ body {
 }
 
 * {
-	font-family: "Manrope", sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 h1 {
